After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771470 - Sometimes right click -> compress keeps the compressed file in some parent dir in list view
Sometimes right click -> compress keeps the compressed file in some parent di...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.21.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-15 07:04 UTC by Mohammed Sadiq
Modified: 2016-09-20 14:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
files-view: use correct parent when compressing/decompressing (4.46 KB, patch)
2016-09-15 14:51 UTC, Carlos Soriano
committed Details | Review

Description Mohammed Sadiq 2016-09-15 07:04:11 UTC
Resulting archives created by right click -> compress may be kept in some parent directory on list view.

How to reproduce:
1. Enable List view
2. Application menu -> Preferences -> check 'Allow folders to be expanded'
3. Expand some non-empty directory (using the left-most arrow)-> select some file -> right click -> compress -> Give archive name -> Create

Result:
The resulting archive is created in the the top most parent directory that is shown in the view.

Expected result:
The archive should be placed in the same directory as the file that is compressed.
Comment 1 Carlos Soriano 2016-09-15 14:51:24 UTC
Created attachment 335650 [details] [review]
files-view: use correct parent when compressing/decompressing

We were using the view as the destination for compression and
decompression.

However, the parent of the files is not always the view. This is the
case in list view when the "allow expand folder" setting is set and the
selection is different than the root location of the view.

To fix it, use a parent of one of the selected files, we assume all
files has the same parent.
Comment 2 Carlos Soriano 2016-09-20 14:46:09 UTC
Attachment 335650 [details] pushed as a73a712 - files-view: use correct parent when compressing/decompressing